--- a/gb/21/7/25/n13113111.md
+++ b/gb/21/7/25/n13113111.md
@@ -1,13 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/etdinh351/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/etdinh351/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/etdinh351/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/etdinh351/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/etdinh351/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/etdinh351/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/etdinh351/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/etdinh351/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/etdinh351/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/etdinh351/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/etdinh351/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/etdinh351/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/etdinh351/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/etdinh351/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/etdinh351/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>大法超常 神奇无处不在 第三集（下）</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>见证大法的神奇 第三集（下）</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13118625-1-600x400.jpg" />
 <h6>一本奇书《转法轮》改变了王晖莲的命运，摆脱了医学无法治愈的疾病。（新唐人）
 </h6>
 <hr>
 <p>在世间缔造无量神迹的法轮大法，那扇神圣的大门为所有善良生命敞开着。</p>
-<p>王晖莲原是中国东北师范大学的一名年轻教师，正值青春年华的她准备去中科院考博士，以实现更大的抱负。一场突如其来的疾病把她彻底击垮，事业上的梦想嘎然而止，她的命运将走向何方？让我们跟随《<ahref="https://github.com/etdinh351/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人宇欣继续倾听她讲述那扣人心弦的故事。</p>
+<p>王晖莲原是中国东北师范大学的一名年轻教师，正值青春年华的她准备去中科院考博士，以实现更大的抱负。一场突如其来的疾病把她彻底击垮，事业上的梦想嘎然而止，她的命运将走向何方？让我们跟随《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人宇欣倾听她讲述那扣人心弦的故事。</p>
+<h2><span style="color: #008000;">学业顺遂??重病袭来??前途未卜</span></h2>
+<p>法轮功学员王晖莲：“1997年硕士毕业之后，就留在东北师范大学做一名年轻教师。因为97年我硕士毕业的时候，我准备去中科院考博士，可是就在考试前的10天左右，我就觉得身体不舒服，当时就是感冒发烧，也没有在意。后来就开始出现……就是两个膝关节就开始腿疼，后来这个病情，腿疼越来越严重，我都需要扶着墙走路，下楼更是艰难，就是每走一步台阶都极其疼痛，我坚持走到楼下的时候，那就是满眼泪水了，太疼了！</p>
+<p>“后来我实在挺不了，我就去医院检查，当时医生就把我留下了，他说：‘你这个病情已经很严重了，赶紧住院治疗。’住院了之后就打青霉菌，但是也没见好转。后来医生就请来省内各大医院的专家进行会诊，确诊为‘急性风湿热’，由于病情很严重嘛，他们就决定给我服用激素，服上激素之后，我这个症状就缓解，腿也不疼了，然后红肿的膝盖也开始收缩，所以我就跟医生商量，我说：‘哎呀！我是不是好了？那么几天之后就考博士了，我还是去北京考博士，然后再慢慢同时服药。’</p>
+<p>“那位医生很严肃，就把我的家人叫来跟我们说：‘生命比博士重要。’事实上我这场病也根本没好，那是激素造成的一种假象吧，这是一场噩梦，这场噩梦才刚刚开始。”</p>
 <h2><span style="color: #008000;">恶梦般的痛苦</span></h2>
 <p>法轮功学员王晖莲：“这一场噩梦才刚刚开始。我按照医生的医嘱每天服用6片激素，然后还有其它的一些治疗风湿的药物，就这样激素要慢慢减量，当从6片减到2片的时候，我这个病就全面复发。复发这个症状比得病的症状还要严重，因为我当时入院的时候就只有两个膝关节疼痛，可是复发的时候就是全身的关节疼痛，就是包括十指关节，所有的手指的小关节，包括肩部、肘部和整个踝关节，所有的关节都疼痛，然后疼痛……就是我不能生活自理呀，所有的吃饭需要别人喂，我不能整理衣服、我不能翻身。最艰难就是我要去卫生间的时候，就不能独立完成，我需要我的姐姐搀扶我，而且她相当于抱着我，一直把我扶到卫生间。她完全抱着我，她完全把我抱起来，然后我要抱着她，相当于我不能用我的两个膝盖在用力嘛。她把我抱在坐便上，就那么一刹那的时候，我真的是泪流满面……</p>
 <p>“我就觉得那种疼痛和那种绝望感，我没有办法用语言来形容这样的生活。后来医生说，那复发了之后要增加激素的用量，用量要从6片增加到8片，而且要长时间服用。那我长时间服用激素之后，激素的副作用就在我身体上完全展现出来，很快我就出现了满月脸。脸这么大，完全是圆的，而且脸部和颈部没有界线，颈部也跟着肥大。而且我睡觉的时候，我在侧卧的时候，我能感觉到我这个脸的存在，就是它很碍事，而且我伴随着满脸痤疮，痤疮大量地出现。我几乎这个脸部没有一点完好的皮肤，就几乎是毁容。还有就是我会平地摔倒，就是走走路就摔倒了，身体非常虚弱。</p>
@@ -22,14 +26,13 @@
 <h2><span style="color: #008000;">一本奇书改变命运：奇迹出现??疾病消失</span></h2>
 <p>法轮功学员王晖莲：“这个时候呢，我想起了我在医院住院的时候，一个朋友去医院看我，给我推荐法轮功。1997年的时候，当时法轮功在国内，在长春市已经有很多人开始习炼了，我也知道，但当时我有那样一个心理，就觉得炼法轮功好像是我父母那个年龄的人要做的事情，我还那么年轻，我有那么多的梦想和追求，所以我就没有太在意。</p>
 <p>“我一直相信医学能治好我的病，这么长的时间，包括我的全家也对于医生所有的治疗方案，都充满了信心，我们极力配合。可是经过了这一年的时间，我的身体不仅没有好，而且越来越糟，我几乎就是一个废人。</p>
-<p>“那么这个时候，我想起了在医院住院的时候，朋友的那个话还在耳边。于是这个时候，我拿起了《<ahref="https://github.com/etdinh351/djy/blob/master/gb/tag/%E8%BD%AC%E6%B3%95%E8%BD%AE.md#1">转法轮</a>》这本书，我静心地把它读完，那么读完了这本书，我觉得我的世界观彻底地改变了，而且一个全新的世界展现在我面前，我觉得我有救了！这场疾病，包括整个的诊治过程，让我觉得现代科学和现代医学救不了我。那么，看完了《转法轮》我觉得我有希望了，我觉得，如果我按照真、善、忍的标准要求自己，我就能有一个健康的身体。</p>
+<p>“那么这个时候，我想起了在医院住院的时候，朋友的那个话还在耳边。于是这个时候，我拿起了《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BD%AC%E6%B3%95%E8%BD%AE.md#1">转法轮</a>》这本书，我静心地把它读完，那么读完了这本书，我觉得我的世界观彻底地改变了，而且一个全新的世界展现在我面前，我觉得我有救了！这场疾病，包括整个的诊治过程，让我觉得现代科学和现代医学救不了我。那么，看完了《转法轮》我觉得我有希望了，我觉得，如果我按照真、善、忍的标准要求自己，我就能有一个健康的身体。</p>
 <p>“那事实上，奇迹也真的出现了，我读完了这本书之后，我没有按照医生的要求，说我一定要加大激素的用量。几天之后，我没有加大激素的用量，医生所预言、所描绘的那种更可怕的症状，没有在我身体上出现。</p>
 <p>“这一年来，这疾病就像一座巨大的大山压在我身上，使我透不过气来。这个时候，我觉得这个沉重的山好像忽然间消失了一样，原来的那个痤疮，那种红得发亮的那种红斑渐渐地在收缩，而且慢慢地那个红色变成了深的棕色，就是在慢慢地往回收缩，而且那个脸部也开始不那么肿大，最重要的就是我恢复了我这一年来几乎没有的食欲，体力和精神都很快地有变化。</p>
 <p>“那么就是这样，几个月的时间吧，1998年9月份我重返校园，从一名学生变成了一位年轻教师。回到学校之后，我觉得我的心态和以前完全不一样了。再回到学校，再看校园，再看周围的人和事，我觉得校园很美，所有的人都很美！</p>
 <p>“修炼法轮功之后 ，我觉得我的心态变了，我不再那么关注、在意自己的得失成败，我只是在过程中能够以真、善、忍的标准来要求自己。”</p>
 <figure id="attachment_13118630" aria-describedby="caption-attachment-13118630" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13118630-3.jpg"><img class=" wp-image-13118630" src="https://i.epochtimes.com/assets/uploads/2021/07/id13118630-3-450x254.jpg" alt="" width="601" b="339" /></a><figcaption id="caption-attachment-13118630" class="wp-caption-text">真善忍净化心灵与身体，王晖莲修炼大法后，无病一身轻。?（新唐人）</figcaption></figure>
-<h2><span style="color: #008000;">真正体验大法神奇</span></h2>
-<h2><span style="color: #008000;">无比感恩大法师父</span></h2>
+<h2><span style="color: #008000;">真正体验大法神奇 无比感恩大法师父</span></h2>
 <p>法轮功学员王晖莲：“二十年过去了，我真正体会到了什么是无病一身轻！不仅医生当时所描绘的，说‘风湿性心脏病会伴随你一生?’，根本就没有出现，而且我觉得我比我20年前还要精力充沛，我真正体会到了法轮大法的神奇和美好！。借此机会我向慈悲伟大的师尊表达我的感恩！感谢师父给我第二次生命！”</p>
 <p><strong>打开窗</strong></p>
 <p><strong>让清风吹拂你</strong></p>
@@ -43,60 +46,60 @@
 <p><strong>那是归真的理念</strong></p>
 <p><strong>真善忍净化了心灵</strong></p>
 <p><strong>让我们感受生命更加美丽</strong></p>
-<p>主持人宇欣：“小莲在绝望之时拿起了《<ahref="https://github.com/etdinh351/djy/blob/master/gb/tag/%E8%BD%AC%E6%B3%95%E8%BD%AE.md#1">转法轮</a>》，一扇通向光明和幸福的大门在她的面前敞开了。”</p>
+<p>主持人宇欣：“小莲在绝望之时拿起了《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BD%AC%E6%B3%95%E8%BD%AE.md#1">转法轮</a>》，一扇通向光明和幸福的大门在她的面前敞开了。”</p>
 <p>主持人姜广宇：“对，而且她马上就恢复了身体的健康，你看二十多年过去了，她依然是那么青春靓丽 ，充满活力。”</p>
 <p>主持人宇欣：“是，今天的节目的嘉宾啊，他们都是亲身经历和证实了法轮大法的神奇，真是可喜可贺！广宇啊，很多的观众朋友都在问说，在哪里可以买到《转法轮》这本书？”</p>
 <p>主持人姜广宇：“问得好，大家可以去你们当地的天梯书店去购买，或者呢去上天梯书店的官网，他们也负责邮购。哦，关于天梯书店的相关信息，就在今天我们节目下方，请大家留意一下。”</p>
 <p>主持人宇欣：“好，观众朋友祝您好运哦！非常感谢您收看今天的节目，下集节目时间再见。”</p>
 <p>主持人姜广宇：“再见。”◇（全文完）</p>
 <figure id="attachment_13118645" aria-describedby="caption-attachment-13118645" style="width: 602px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13118645-4.jpg"><img class=" wp-image-13118645" src="https://i.epochtimes.com/assets/uploads/2021/07/id13118645-4-450x249.jpg" alt="" width="602" b="333" /></a><figcaption id="caption-attachment-13118645" class="wp-caption-text">《转法轮》这本书让王晖莲绝处逢生，迎来生命的春天。（新唐人）</figcaption></figure>
-<p>（点阅【<ahref="https://github.com/etdinh351/djy/blob/master/gb/tag/%e5%a4%a7%e6%b3%95%e8%b6%85%e5%b8%b8-%e7%a5%9e%e5%a5%87%e7%84%a1%e8%99%95%e4%b8%8d%e5%9c%a8.md#1">大法超常 神奇无处不在</a>】系列文章。）</p>
+<p>（点阅<span style="color: #800080;"><a style="color: #800080;" href="https://github.com/hxcaik307/djy/blob/master/gb/tag/%e8%a6%8b%e8%ad%89%e5%a4%a7%e6%b3%95%e7%9a%84%e7%a5%9e%e5%a5%87.md#1">【见证大法的神奇】</a></span>系列文章。）</p>
 <p>责任编辑：李梅#</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/25/n13113105.md#1">大法超常 神奇无处不在 第三集（上）</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/6/27/n13049948.md#1">大法超常 神奇无处不在 第二集（下）</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/6/27/n13049947.md#1">大法超常 神奇无处不在 第二集（上）</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/6/5/n13001372.md#1">大法超常  神奇无处不在 第一集（下）</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/6/5/n13001368.md#1">大法超常 神奇无处不在 第一集（上）</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/5/6/n12928140.md#1">走出生命迷宫   证实大法美好——来自德国埃娃玛丽的故事</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/4/9/n12868162.md#1">纽约服装界女强人莉莉的传奇故事（4）</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/4/8/n12865690.md#1">纽约服装界女强人莉莉的传奇故事（3）</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/4/1/n12850323.md#1">纽约服装界女强人莉莉的传奇故事（2）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/1/n13474190.md#1">一位总参办少校参谋的故事（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/1/n13474185.md#1">一位总参办少校参谋的故事（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/30/n13468191.md#1">从高傲到谦卑 台湾精神科医师的修炼故事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/18/n13311349.md#1">见证大法的神奇──婺剧演员朱媛珠的故事〈下〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/18/n13311345.md#1">见证大法的神奇──婺剧演员朱媛珠的故事〈上〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/4/n13279871.md#1">见证大法的神奇──李旻与刘庆的故事〈下〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/4/n13279344.md#1">见证大法的神奇──李旻与刘庆的故事〈上〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/25/n13113105.md#1">见证大法的神奇 第三集（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/27/n13049948.md#1">见证大法的神奇 第二集（下）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/3/n11564392.md#1" target="_blank">凌晓辉：当代人类的天书（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/30/n11622063.md#1" target="_blank">林辉：中共对赵州桥的破坏令人叹惋</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11383793.md#1" target="_blank">德国小伙修炼法轮功 戒毒戒烟获新生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/25/n13113957.md#1">【馨香雅句】中国传统色彩承载了哪些文化</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/20/n13101165.md#1">【品读宋词】世事如梦 几度秋凉</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/29/n13125465.md#1">【未解之谜】台湾朱秀华 “借尸还魂”60年</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/23/n13110635.md#1">【未解之谜】捕捉灵魂的摄影师</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/20/n13102261.md#1">一首诗惊动皇上  跨越关山圆了情人梦</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/31/n13128792.md#1">车评：跑车复刻 2021 Toyota GR Supra 2.0</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/30/n13127996.md#1">【首播】专访利特琼：帮助中国人民获得自由</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/31/n13129531.md#1">【横河观点】奥运场怪事：中共体育政治玩过头</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/30/n13127177.md#1">阿里巴巴最新年报显示 马云已抛光全部股票</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/29/n13125683.md#1">运动员出身的大陆女星 周冬雨的表现最亮眼</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/30/n13127838.md#1">中共唆使小粉红辱骂日本冠军 惊动日本政府</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/29/n13125683.md#1">运动员出身的大陆女星 周冬雨的表现最亮眼</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/30/n13128360.md#1">戴资颖进东奥羽球女单4强 林志玲送神秘礼物</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/30/n13128114.md#1">古天乐赞张家朗奥运夺冠 拒评同场《声梦》学员</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/29/n13125245.md#1">陈意涵宣布怀第二胎 年底喜迎女儿凑好字</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/30/n13127962.md#1">台湾资深艺人洪麟骤逝 享寿78岁</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/29/n13125226.md#1">哈佛专家：人人都有1种药 能改善记忆力、防失智</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/28/n13122210.md#1">苦瓜退火养心、降血糖 加1物养生效果更好</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/30/n13126866.md#1">牛奶、植物奶谁好？营养师：喝这个补蛋白质最佳</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/29/n13124918.md#1">辉瑞疫苗保护力降至不足50% 原因一篇看懂</a></li>
-<li><a href="https://github.com/etdinh351/djy/blob/master/gb/21/7/30/n13126288.md#1">哥国女选手赛前大喊“马英九”？ 网友求解</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/etdinh351/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/etdinh351/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/25/n13113111.htm">大法超常 神奇无处不在 第三集（下）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/25/n13113111.htm">见证大法的神奇 第三集（下）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/etdinh351/djy/blob/master/gb/21/7/25/n13113111.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/etdinh351/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/etdinh351/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/etdinh351/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/etdinh351/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/etdinh351/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/25/n13113111.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
